# iris-classifier-app

./: .gitignore  README.md  app_streamlit.py  iris.csv  pyproject.toml
.github/workflows/: ci.yml
models/: knn_model.pkl
src/api/: app.py
