[project]

name = "iris-classifier"
version = "0.1.0"
dependencies = [
    "scikit-learn",
    "pandas",
    "numpy",
    "matplotlib",
    "fastapi",
    "uvicorn",
    "pydantic",
    "mlflow>=3.6.0",
    "seaborn>=0.13.2",
    "pytest>=9.0.1",
    "httpx>=0.28.1",
    "streamlit>=1.51.0",
    "prometheus-client>=0.23.1",
]
